--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,7 @@
-AlAdl       : Genangan air
-AlAhad      : Anomali di tembok dengan model
-AlAnkabut   : Telapak tangan dan sapu
-AlFaruq     : Anomali di tembok tanpa model
-AlGhaffar   : Telapak tangan
-AlKabir     : Sapu, Pel
-AlWaraq     : Kertas
+AlAdl : Genangan air
+AlAhad : Anomali di tembok dengan model
+AlHafizh : Telapak tangan dan sapu
+AlFaruq : Anomali di tembok tanpa model
+AlGhaffar : Telapak tangan
+AlKabir : Sapu, Pel
+AlWaraq : Kertas
